--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "react-bootstrap": "^0.32.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
